--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -186,3 +186,354 @@ pre {
   font-family: monospace, monospace;
   font-size: 1em;
 }
+
+
+.bsbb {
+  box-sizing: border-box;
+}
+
+.p15 {
+  padding: 15px;
+}
+
+.p120 {
+  padding: 10px 20px;
+}
+
+.p20 {
+  padding: 20px;
+}
+
+.p25 {
+  padding: 25px;
+}
+
+.mr5 {
+  margin-right: 5px;
+}
+
+.mr20 {
+  margin-right: 20px;
+}
+
+.mr30 {
+  margin-right: 30px;
+}
+
+.ml2 {
+  margin-left: 2sspx;
+}
+
+.ml5 {
+  margin-left: 5px;
+}
+
+.ml10 {
+  margin-left: 10px;
+}
+
+.ml20 {
+  margin-left: 20px;
+}
+
+.ml30 {
+  margin-left: 30px;
+}
+
+.fw7 {
+  font-weight: 700;
+}
+
+.fw6 {
+  font-weight: 600;
+}
+
+.fw5 {
+  font-weight: 500;
+}
+
+.fw4 {
+  font-weight: 400;
+}
+
+
+.mt5 {
+  margin-top: 5px;
+}
+
+.mt6 {
+  margin-top: 6px;
+}
+
+.mt8 {
+  margin-top: 8px;
+}
+
+.mt10 {
+  margin-top: 10px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 30px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.mt60 {
+  margin-top: 60px;
+}
+
+.mr10 {
+  margin-right: 10px;
+}
+
+.mr20 {
+  margin-right: 20px;
+}
+
+.mr40 {
+  margin-right: 40px;
+}
+
+.mb5 {
+  margin-bottom: 5px;
+}
+
+.mb8 {
+  margin-bottom: 8px;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+
+.mb12 {
+  margin-bottom: 12px;
+}
+
+.mb15 {
+  margin-bottom: 15px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
+.mb30 {
+  margin-bottom: 30px;
+}
+
+.mb40 {
+  margin-bottom: 40px;
+}
+
+.mb50 {
+  margin-bottom: 50px;
+}
+
+.mb60 {
+  margin-bottom: 60px;
+}
+
+.pt20 {
+  padding-top: 20px;
+}
+
+.p10 {
+  padding: 10px;
+}
+
+.p15 {
+  padding: 15px;
+}
+
+.p20 {
+  padding: 20px;
+}
+
+.p30 {
+  padding: 30px;
+}
+
+.p40 {
+  padding: 40px;
+}
+
+.p60 {
+  padding: 60px;
+}
+
+.df {
+  display: flex;
+}
+
+.f1 {
+  flex: 1;
+}
+
+.fn {
+  flex: none;
+}
+
+.fww {
+  flex-wrap: wrap;
+}
+
+.fwnw {
+  flex-wrap: nowrap;
+}
+
+.jcc {
+  justify-content: center;
+}
+
+.tal {
+  text-align: left;
+}
+
+.tac {
+  text-align: center;
+}
+
+.tar {
+  text-align: right;
+}
+
+.jzz {
+  margin: auto;
+}
+
+.aic {
+  align-items: center;
+}
+
+.aie {
+  align-items: end;
+}
+
+.fdc {
+  flex-direction: column;
+}
+
+.jcsb {
+  justify-content: space-between;
+}
+
+.jcsa {
+  justify-content: space-around;
+}
+
+.jcse {
+  justify-content: space-evenly;
+}
+
+.jcfe {
+  justify-content: flex-end;
+}
+
+.nw {
+  white-space: nowrap;
+}
+
+.fz12 {
+  font-size: 12px !important;
+}
+
+.fz14 {
+  font-size: 14px !important;
+}
+
+.fz16 {
+  font-size: 16px !important;
+}
+
+.fz18 {
+  font-size: 18px !important;
+}
+
+.fz20 {
+  font-size: 20px !important;
+}
+
+.fz22 {
+  font-size: 22px !important;
+}
+
+.fz24 {
+  font-size: 24px !important;
+}
+
+.fz26 {
+  font-size: 26px !important;
+}
+
+.fz28 {
+  font-size: 28px !important;
+}
+
+.fz30 {
+  font-size: 30px !important;
+}
+
+.fz32 {
+  font-size: 32px !important;
+}
+
+.fz34 {
+  font-size: 34px !important;
+}
+
+.fz36 {
+  font-size: 36px !important;
+}
+
+.fz40 {
+  font-size: 40px !important;
+}
+
+.fz48 {
+  font-size: 48px !important;
+}
+
+.c222 {
+  color: #222;
+}
+
+.c333 {
+  color: #333;
+}
+
+.c666 {
+  color: #666;
+}
+
+.c999 {
+  color: #999;
+}
+
+.cfff {
+  color: #fff;
+}
+
+.c000 {
+  color: #000;
+}
+
+.red {
+  color: red;
+}
+.gray{
+  color:#93989F
+}
+.b1{
+  color: #0359BD;
+}
+.b2{
+  color: #313C5B;
+}
