--- a/src/style/reset_van.scss
+++ b/src/style/reset_van.scss
@@ -15,5 +15,6 @@
   content: '' !important;
   width: 10px;
   height: 16px;
-  background: url('@/assets/images/backIcon.png') 100% no-repeat !important;
+  background: url('@/assets/images/backIcon.png') center center no-repeat !important;
+  background-size: 100% !important;
 }
